# Persuasion_Index_Code

./: .env.example  .gitignore  PI_score_generator.py  README.md  THIRD_PARTY_RESOURCES.md  analysis_example.ipynb  category_definitions.txt  lexicons_expanded.txt  persuasion_profile.py  persuasion_runner.py  pi_config.py  pyproject.toml  requirements.txt
helper_features/: __init__.py  en_liwc.txt  lexicons.json
helper_features/Convokit_Politeness/: __init__.py
helper_features/regression_outputs/: __init__.py  ci_ukp_mean.csv  ci_ukp_subfeatures.csv
lexicons/LLM_expansion/: README.md  apply_audit.py  build_theory_definitions.py  generation_prompts.py  generator_runner.py  postprocess_generation.py  prompts.py
lexicons/lexicons_validation/: lexicon_code_validation.ipynb
persuasion_index/: __init__.py  api.py  cli.py
tests/: test_package_api.py
